# Blog_in_rust_perfect

./: .env  Cargo.toml  package-lock.json  package.json
.github/workflows/: rust.yml
configuration/: db_config.yaml  db_configuration.toml
migrations/: 20230418052823_categories.sql  20230418060456_posts.sql  20230707054234_posts_table.sql  20230707061449_categories_table.sql  20230707061945_categories_posts.sql  20230707070559_insert_posts_data.sql  20230707071211_insert_posts_data_again.sql  20230707071333_insert_data_categories_table.sql  20230707072903_insert_data_categories_posts.sql  20230707074224_user_table.sql  20230707074814_insert_users_data.sql  20230714071520_alter_categories_posts_table.sql  20230719025958_posts_alter_add_timestamp.sql  20230719030012_categories_alter_add_timestamp.sql
src/: main.rs
src/controller/: General_pagination.rs  admin_function.rs  admin_pagination.rs  category_controller.rs  common_controller.rs  constants.rs  handlebars_main.rs  home_page.rs  mod.rs  new.rs  pagination_controller.rs  pagination_logic.rs  posts_controller.rs  single_post_controller.rs  test_liquid.rs
src/controllers/: constants.rs  mod.rs
src/model/: Single_posts_database.rs  categories.rs  category.rs  category_database.rs  (+11 more)
templates/: admin_categories_page.hbs  admin_page.hbs  admin_sample.hbs  admin_single_post.hbs  all_categories.hbs  category.hbs  common.hbs  common_two.hbs  index.hbs  login.css  login.hbs  new_category.hbs  new_post.hbs  pagination_page.hbs  register.hbs  sample.hbs  sample2.hbs  single.hbs  update_category.hbs  update_post.hbs
(+60 files in other folders)
