[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
actix = "0.12"
actix-web = "4"
actix-files = "0.6.2"
handlebars = {version="4.3.7" , features=["dir_source"]}
actix-identity = "0.5"
actix-session = { version = "0.7", features = [ "cookie-session" ] }
serde = "1.0"
anyhow = "1.0"
serde_json = "1.0.96"
env_logger = "0.10.0"
actix-web-flash-messages = {version="0.4.2",features=["cookies","sessions"]}
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
argon2 = { version = "0.5.1", features = ["std"] }
config = "0.13"
puffin = "0.16.0"
web-sys = {verion="0.3.64", features = ["Storage"]}
once_cell = "1.18.0"
cookie = "0.17.0"